// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots widgets/Loader circular 1`] = `
<div
  className="MuiGrid-container-01"
>
  <div
    className="MuiGrid-item-02 MuiGrid-grid-xs-12-041"
  >
    <div
      className="MuiGrid-container-01 MuiGrid-align-items-xs-center-09 MuiGrid-justify-xs-center-018 Loader-root-1"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader custom 1`] = `
<div
  className="MuiGrid-container-0195"
>
  <div
    className="MuiGrid-item-0196 MuiGrid-grid-xs-12-0235"
  >
    <div
      className="MuiGrid-container-0195 MuiGrid-align-items-xs-center-0203 MuiGrid-justify-xs-center-0212 Loader-root-1"
    >
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "color": "#9c27b0",
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={18.5}
            strokeWidth={7}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Loader linear 1`] = `
<div
  className="MuiGrid-container-098"
>
  <div
    className="MuiGrid-item-099 MuiGrid-grid-xs-12-0138"
  >
    <div
      className="MuiGrid-container-098 MuiGrid-align-items-xs-center-0106 MuiGrid-justify-xs-center-0115 Loader-root-1"
    >
      <div
        className="MuiLinearProgress-root MuiLinearProgress-colorPrimary Loader-linear-3"
        role="progressbar"
      >
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
          style={Object {}}
        />
        <div
          className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0292 MuiGrid-spacing-xs-24-0316"
    >
      <div
        className="MuiDrawer-docked-0389"
      >
        <div
          className="MuiPaper-root-0400 MuiPaper-elevation0-0402 MuiDrawer-paper-0390 MuiDrawer-paperAnchorLeft-0391 MuiDrawer-paperAnchorDockedLeft-0395"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0562 MuiGrid-spacing-xs-24-0586"
    >
      <div
        className="MuiDrawer-docked-0659"
      >
        <div
          className="MuiPaper-root-0670 MuiPaper-elevation0-0672 MuiDrawer-paper-0660 MuiDrawer-paperAnchorLeft-0661 MuiDrawer-paperAnchorDockedLeft-0665"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-activeItem-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7 SideMenu-listItemHidden-8"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0427 MuiGrid-spacing-xs-24-0451"
    >
      <div
        className="MuiDrawer-docked-0524"
      >
        <div
          className="MuiPaper-root-0535 MuiPaper-elevation0-0537 MuiDrawer-paper-0525 MuiDrawer-paperAnchorLeft-0526 MuiDrawer-paperAnchorDockedLeft-0530"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root MuiList-padding SideMenu-root-2 Component-flexed-1"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-3"
            />
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-activeItem-10"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
            <div
              className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters SideMenu-listItemGutters-5 MuiListItem-button SideMenu-listItem-4"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root MuiListItemIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <div
                className="MuiListItemText-root SideMenu-listItemText-7"
              >
                <span
                  className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary SideMenu-listItemPrimary-6"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root"
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
              <span
                className="MuiTouchRipple-root"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-01182 MuiGrid-spacing-xs-24-01206"
    >
      <div
        className="MuiGrid-item-01183 MuiGrid-grid-xs-12-01222"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root"
        >
          <div
            className="MuiGrid-container-01182 MuiGrid-direction-xs-column-01185 Widget-container"
          >
            <div
              className="MuiGrid-item-01183"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h2>
            </div>
            <div
              className="MuiGrid-container-01182 MuiGrid-item-01183 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-01570 MuiGrid-spacing-xs-24-01594"
    >
      <div
        className="MuiGrid-item-01571 MuiGrid-grid-xs-12-01610"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root"
        >
          <div
            className="MuiGrid-container-01570 MuiGrid-direction-xs-column-01573 Widget-container"
          >
            <div
              className="MuiGrid-item-01571"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Custom content height
              </h2>
            </div>
            <div
              className="MuiGrid-container-01570 MuiGrid-item-01571 Widget-content Component-content-1"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-01279 MuiGrid-spacing-xs-24-01303"
    >
      <div
        className="MuiGrid-item-01280 MuiGrid-grid-xs-12-01319"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-featured"
        >
          <div
            className="MuiGrid-container-01279 MuiGrid-direction-xs-column-01282 Widget-container"
          >
            <div
              className="MuiGrid-item-01280"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h2>
            </div>
            <div
              className="MuiGrid-container-01279 MuiGrid-item-01280 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-01473 MuiGrid-spacing-xs-24-01497"
    >
      <div
        className="MuiGrid-item-01474 MuiGrid-grid-xs-12-01513"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 Widget-root"
        >
          <div
            className="MuiGrid-container-01473 MuiGrid-direction-xs-column-01476 Widget-container"
          >
            <div
              className="MuiGrid-item-01474"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                I have no rounded borders
              </h2>
            </div>
            <div
              className="MuiGrid-container-01473 MuiGrid-item-01474 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-01376 MuiGrid-spacing-xs-24-01400"
    >
      <div
        className="MuiGrid-item-01377 MuiGrid-grid-xs-12-01416"
      >
        <div
          className="MuiGrid-container-01376 MuiGrid-spacing-xs-24-01400"
        >
          <div
            className="MuiGrid-item-01377 MuiGrid-grid-xs-6-01410"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Widget-border-top"
            >
              <div
                className="MuiGrid-container-01376 MuiGrid-direction-xs-column-01379 Widget-container"
              >
                <div
                  className="MuiGrid-item-01377"
                >
                  <h2
                    className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top
                  </h2>
                </div>
                <div
                  className="MuiGrid-container-01376 MuiGrid-item-01377 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-01377 MuiGrid-grid-xs-6-01410"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Widget-border-bottom"
            >
              <div
                className="MuiGrid-container-01376 MuiGrid-direction-xs-column-01379 Widget-container"
              >
                <div
                  className="MuiGrid-item-01377"
                >
                  <h2
                    className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom
                  </h2>
                </div>
                <div
                  className="MuiGrid-container-01376 MuiGrid-item-01377 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-01377 MuiGrid-grid-xs-6-01410"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Component-customTopBorder-2 Widget-border-top"
            >
              <div
                className="MuiGrid-container-01376 MuiGrid-direction-xs-column-01379 Widget-container"
              >
                <div
                  className="MuiGrid-item-01377"
                >
                  <h2
                    className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top custom
                  </h2>
                </div>
                <div
                  className="MuiGrid-container-01376 MuiGrid-item-01377 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-01377 MuiGrid-grid-xs-6-01410"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Component-customBotomBorder-3 Widget-border-bottom"
            >
              <div
                className="MuiGrid-container-01376 MuiGrid-direction-xs-column-01379 Widget-container"
              >
                <div
                  className="MuiGrid-item-01377"
                >
                  <h2
                    className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom custom
                  </h2>
                </div>
                <div
                  className="MuiGrid-container-01376 MuiGrid-item-01377 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0697 MuiGrid-spacing-xs-24-0721"
    >
      <div
        className="MuiGrid-item-0698 MuiGrid-grid-xs-12-0737"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root"
        >
          <div
            className="MuiGrid-container-0697 MuiGrid-direction-xs-column-0700 Widget-container"
          >
            <div
              className="MuiGrid-item-0698"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h2>
            </div>
            <div
              className="MuiGrid-container-0697 MuiGrid-item-0698 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget custom height 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-01085 MuiGrid-spacing-xs-24-01109"
    >
      <div
        className="MuiGrid-item-01086 MuiGrid-grid-xs-12-01125"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root"
        >
          <div
            className="MuiGrid-container-01085 MuiGrid-direction-xs-column-01088 Widget-container"
          >
            <div
              className="MuiGrid-item-01086"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Custom content height
              </h2>
            </div>
            <div
              className="MuiGrid-container-01085 MuiGrid-item-01086 Widget-content Component-content-1"
            >
              <div>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0794 MuiGrid-spacing-xs-24-0818"
    >
      <div
        className="MuiGrid-item-0795 MuiGrid-grid-xs-12-0834"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-featured"
        >
          <div
            className="MuiGrid-container-0794 MuiGrid-direction-xs-column-0797 Widget-container"
          >
            <div
              className="MuiGrid-item-0795"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                Title
              </h2>
            </div>
            <div
              className="MuiGrid-container-0794 MuiGrid-item-0795 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget squared 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0988 MuiGrid-spacing-xs-24-01012"
    >
      <div
        className="MuiGrid-item-0989 MuiGrid-grid-xs-12-01028"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation2 Widget-root"
        >
          <div
            className="MuiGrid-container-0988 MuiGrid-direction-xs-column-0991 Widget-container"
          >
            <div
              className="MuiGrid-item-0989"
            >
              <h2
                className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
              >
                I have no rounded borders
              </h2>
            </div>
            <div
              className="MuiGrid-container-0988 MuiGrid-item-0989 Widget-content"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-0891 MuiGrid-spacing-xs-24-0915"
    >
      <div
        className="MuiGrid-item-0892 MuiGrid-grid-xs-12-0931"
      >
        <div
          className="MuiGrid-container-0891 MuiGrid-spacing-xs-24-0915"
        >
          <div
            className="MuiGrid-item-0892 MuiGrid-grid-xs-6-0925"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Widget-border-top"
            >
              <div
                className="MuiGrid-container-0891 MuiGrid-direction-xs-column-0894 Widget-container"
              >
                <div
                  className="MuiGrid-item-0892"
                >
                  <h2
                    className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top
                  </h2>
                </div>
                <div
                  className="MuiGrid-container-0891 MuiGrid-item-0892 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-0892 MuiGrid-grid-xs-6-0925"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Widget-border-bottom"
            >
              <div
                className="MuiGrid-container-0891 MuiGrid-direction-xs-column-0894 Widget-container"
              >
                <div
                  className="MuiGrid-item-0892"
                >
                  <h2
                    className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom
                  </h2>
                </div>
                <div
                  className="MuiGrid-container-0891 MuiGrid-item-0892 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-0892 MuiGrid-grid-xs-6-0925"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Component-customTopBorder-2 Widget-border-top"
            >
              <div
                className="MuiGrid-container-0891 MuiGrid-direction-xs-column-0894 Widget-container"
              >
                <div
                  className="MuiGrid-item-0892"
                >
                  <h2
                    className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border top custom
                  </h2>
                </div>
                <div
                  className="MuiGrid-container-0891 MuiGrid-item-0892 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-item-0892 MuiGrid-grid-xs-6-0925"
          >
            <div
              className="MuiPaper-root MuiPaper-elevation2 MuiPaper-rounded Widget-root Widget-border Component-customBotomBorder-3 Widget-border-bottom"
            >
              <div
                className="MuiGrid-container-0891 MuiGrid-direction-xs-column-0894 Widget-container"
              >
                <div
                  className="MuiGrid-item-0892"
                >
                  <h2
                    className="MuiTypography-root MuiTypography-title MuiTypography-colorInherit MuiTypography-gutterBottom"
                  >
                    Border bottom custom
                  </h2>
                </div>
                <div
                  className="MuiGrid-container-0891 MuiGrid-item-0892 Widget-content"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
